Kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: netflix-app
  labels:
    app: netflix-app
spec:
  type: NodePort
  selector:
    app: netflix-app
  ports:
    - name: http
      port: 80                 # service port inside cluster
      targetPort: 80
